# netcdf

./: .gitignore  Dockerfile.gnu-linux  LICENSE  Makefile  README.md  mix.exs
.github/workflows/: ci.yml  release.yml  rust_ci.yml
examples/: load_to_nx.livemd
lib/: data_parser.ex
lib/data_parser/: net_cdf.ex
lib/data_parser/net_cdf/: file.ex  native.ex  variable.ex
lib/netcdf/: file.ex  native.ex  variable.ex
native/dataparser_netcdf/: Cargo.toml  README.md
native/dataparser_netcdf/src/: error.rs  lib.rs  types.rs
native/dataparser_netcdf/src/types/: file.rs  value.rs  variable.rs
native/ex_netcdf/: Cargo.toml
native/ex_netcdf/src/: error.rs  lib.rs  types.rs
native/ex_netcdf/src/types/: file.rs  value.rs  variable.rs
priv/: hello_world.nc  invalid.nc  string_test.nc
test/: data_parser_test.exs
test/netcdf/: file_test.exs  variable_test.exs
