[package]
name = "ex_netcdf"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_netcdf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
netcdf = { version = "0.8.1", features = ["static"] }
netcdf-sys = { version = "0.5.0", features = ["static"] }
thiserror = "1"
ndarray = "0.15.6"